--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 *.pdf
 *.rubbercache
 !docs/esterni/candidatura/*.pdf
+!docs/interni/verbali/2021_10_28_E/*.pdf
+!docs/interni/verbali/2021_11_12_E/*.pdf
