aggiunte fonti e descrizione tabella

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.synctex.gz
 *.pdf
 *.rubbercache
+*.fls
+*.fdb_latexmk
 !docs/esterni/candidatura/*.pdf
 !docs/interni/verbali/2021_10_28_E/*.pdf
 !docs/interni/verbali/2021_11_12_E/*.pdf
