--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.rubbercache
 *.fls
 *.fdb_latexmk
+.DS_Store
 !docs/esterni/candidatura/*.pdf
 !docs/interni/verbali/2021_10_28_E/*.pdf
 !docs/interni/verbali/2021_11_12_E/*.pdf
