--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 !docs/esterni/candidatura/*.pdf
 !docs/interni/verbali/2021_10_28_E/*.pdf
 !docs/interni/verbali/2021_11_12_E/*.pdf
+server/package-lock.json
+server/node_modules
