--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "qrcode": "^1.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.20",
     "@types/node": "^17.0.8",
+    "@types/qrcode": "^1.4.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
