--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ server/package-lock.json
 server/node_modules
 server/build
 server/coverage
+
+build
+*.secret
+*.json
+!package.json
+node_modules
+test
+*.sh
