--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
-    "qrcode": "^1.5.0"
+    "qrcode": "^1.5.0",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
