--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,6 @@ DB_HOST="localhost"
 DB_USER="username"
 DB_PWD="password"
 DB_NAME="OnlineStore"
-APIKEY = 5c29520422f9528344aa64a1
+API_KEY=5c29520422f9528344aa64a1
+CONTRACT_ADDRESS= "0xd0788b436100B967B68e59665cB404f601ED841f"
+TINYURL="2p9xf7wx"
