--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ DB_PWD="password"
 DB_NAME="OnlineStore"
 API_KEY=5c29520422f9528344aa64a1
 CONTRACT_ADDRESS="0xC3FDE503A89a36529fdDEbbcb1C4a4dE970d2731"
-TINYURL="37vsja83"
+QR_URL="tinyurl.com/37vsja83"
