--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/http-server": "^0.12.1",
     "body-parser": "^1.19.1",
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
