--- a/contract/package.json
+++ b/contract/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "none",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.1",
+    "@chainlink/contracts": "^0.4.0",
+    "@openzeppelin/contracts": "^4.5.0",
     "@truffle/hdwallet-provider": "^1.7.0"
   },
   "devDependencies": {
