--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ server/package-lock.json
 server/node_modules
 server/build
 server/coverage
+contract/.coverage_contracts
+contract/.coverage_artifacts
 
 build
 *.secret
