--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --project ./",
-    "start": "nodemon main.ts",
+    "start": "forever -c 'nodemon --exitcrash' main.ts",
     "test": "ENV_FILE=.env jest --coverage"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "dotenv": "^11.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "forever": "^4.0.3",
     "mysql2": "^2.3.3",
     "qrcode": "^1.5.0",
     "web3": "^1.7.0"
